8286198: [linux] Fix process-memory information

Backport-of: 9e320d9ab1813eda705d7318ef964092c50d1ade
(cherry picked from commit 7921cc1a433f7ff16bf597d8b6d5c837aabde494)